--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
 <body>
     <div id="hello-world"><div>
 </body>
-<script type="text/javascript" src="../assets/bundle.js"></script>
+<script type="text/javascript" src="public/js/bundle.js"></script>
 </html>
