--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
+  <h1>hello-world</h1>
     <div id="hello-world"><div>
 </body>
-<script type="text/javascript" src="public/js/bundle.js"></script>
+<script type="text/javascript" src="js/bundle.js"></script>
 </html>
