create function update in db.utils, create route for update, add new form for update, add functions for update data in data base

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <div id="hello-world"><div>
+    <div id="hello-world"></div>
+      <div id="update"></div>
 </body>
 <script type="text/javascript" src="/public/js/bundle.js"></script>
 </html>
